# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.46 2005/01/17 18:57:59 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  17 Jan 2004: John Laliberte <allanonl@bu.edu>
  Networking.py - changed from combobox to comboentrybox.  Redid some of the
  logic used to make the user experience better.
  Widgets.py - added an errorbox2 that has okay and cancel.

  16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  RunInstall.py called poll_notifications() in gtk idle loop and progress
  bar/status display work. Take ~5 fscking hours to figure out that pygtk
  is fscking retarted and locks its thread so python won't switch to
  another thread :(

  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
  USE flag editor now generated proper + and - USE line. CFLAGS ComboBoxes
  and Entry in MakeDotConf. CFLAGS is set in InstallProfile. MakeDotConf does
  CHOST, ACCEPT_KEYWORDS, MAKEOPTS, and FEATURES. New screen/code to actually
  run the install.

  15 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - added support for a custom ethernet device.
  Fixed a lot of little bugs having to do with user interaction,
  and added support for loading from the .xml file.
  Networking.py - added support for hostname and dnsdomainname.

  14 Jan 2005; John Laliberte <allanonl@bu.edu>
  Timezone.py - fixed bug where after selecting a timezone, it would jump
  to the parent of the selection.
  Networking.py - fixed bug where some fields would be available if device
  was selected and was dhcp.  also integrated into backend ( one way only
  so far, only will save, not load settings yet ).  Added error box to
  ask the user if they want to replace settings or cancel if the device
  is already listed.
  
  14 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>