@@ -1,10 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.46 2005/01/17 18:57:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.47 2005/01/18 04:17:11 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
-  17 Jan 2004: John Laliberte <allanonl@bu.edu>
+  17 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added blurb about me being lazy to Welcome. Turned off pretend mode for
+  gtkfe
+
+  17 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - changed from combobox to comboentrybox.  Redid some of the
   logic used to make the user experience better.
   Widgets.py - added an errorbox2 that has okay and cancel.
